Create index action, its tests and documentation for projects
