# app/controllers/projects_controller.rb
@@ -1,0 +1,7 @@
+class ProjectsController < ApplicationController
+  def index
+    @projects = Project.all
+
+    render json: @projects
+  end
+end
