# config/routes.rb
@@ -4,13 +4,15 @@ Rails.application.routes.draw do
   # For details on the DSL available within this file, see http://guides.rubyonrails.org/routing.html
   root to: redirect('/docs')
 
-  resources :roles
+  resources :projects
 
   resources :resources
 
   resources :resource_types
 
-  resources :tags
+  resources :roles
 
   resources :schedules
+
+  resources :tags
 end
